--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@docusaurus/plugin-ideal-image": "^3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
+    "@tailwindcss/vite": "^4.1.5",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
